# diamond

./: Cargo.toml  README.md
.github/workflows/: rust.yml
lib/: Cargo.toml
lib/src/: lib.rs  path.rs  prelude.rs
server/: Cargo.toml
server/src/: listener.rs  main.rs  server.rs
src/: main.rs  path.rs  prelude.rs
src/server/: listener.rs  mod.rs
src/unit/: mod.rs
