[package]
name = "diamond"
version = "0.1.0"
edition = "2024"
authors = ["misaka10987 <misaka10987@outlook.com>"]
description = "Common library for diamond, just a daemon"
documentation = "https://github.com/misaka10987/diamond"
homepage = "https://github.com/misaka10987/diamond"
repository = "https://github.com/misaka10987/diamond"
readme = "../README.md"
keywords = ["diamond", "service", "daemon", "init", "systemd"]
license = "MIT"

[dependencies]
thiserror = "2.0.12"
anyhow = "1.0.98"
axum = "0.8.4"
interprocess = { version = "2.2.3", features = ["async", "tokio"] }
tokio = { version = "1.45.1", features = ["fs", "signal", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
