[package]
name = "diamond-server"
version = "0.1.0"
edition = "2024"

[dependencies]
diamond = { path = "../lib" }
anyhow = "1.0.98"
axum = "0.8.4"
interprocess = { version = "2.2.3", features = ["async", "tokio"] }
tokio = { version = "1.45.1", features = ["fs", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.40", features = ["derive"] }
